--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-  <title>Welcome~~~ to My Site !!!</title>
-=======
-  <title>Welcome to Perry's Site!!!</title>
->>>>>>> parent of efa4e57... change verson
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Welcome to Perry's Site!!!</title>
 </head>
 <body>
   <div id="nav">
